--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -1,5 +1,16 @@
 @import './colors.scss';
 
+.swiper-slide{
+  height: 30rem !important;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  display: flex !important;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
 .App{
   min-height: 100vh;
   display: flex;
@@ -45,3 +56,32 @@ footer {
   }
 }
 }
+
+
+.section{
+    background-color: aqua;
+    padding: 2rem;
+    display: flex;
+    justify-content: space-around;
+}
+
+.item {
+  background-color: #ffff;
+  margin: 2rem;
+ 
+  img {
+    overflow: hidden;
+    position: relative;
+    width: 100%;
+  }
+
+  .item-text{
+    padding: 1.5rem;
+  }
+
+}
+
+#home {
+  flex-grow: 1;
+}
+
